tests/lang/compile_fail/spawn_bare_fn_error.kojs
fn worker
  receive
    msg -> msg.print()
  end
end

spawn worker
